tests/machine/x/c/left_join_multi.error
line: 0
error: cc error: exit status 1
/workspace/mochi/tests/machine/x/c/left_join_multi.c: In function ‘main’:
/workspace/mochi/tests/machine/x/c/left_join_multi.c:112:51: warning: initialization of ‘int’ from ‘char *’ makes integer from pointer without a cast [-Wint-conversion]
  112 |             (resultItem){.orderId = o.id, .name = c.name, .item = i};
      |                                                   ^
/workspace/mochi/tests/machine/x/c/left_join_multi.c:112:51: note: (near initialization for ‘(anonymous).name’)
/workspace/mochi/tests/machine/x/c/left_join_multi.c:112:67: error: incompatible types when initializing type ‘int’ using type ‘itemsItem’
  112 |             (resultItem){.orderId = o.id, .name = c.name, .item = i};
      |                                                                   ^
/workspace/mochi/tests/machine/x/c/left_join_multi.c:116:23: error: invalid initializer
  116 |         itemsItem i = 0;
      |                       ^
/workspace/mochi/tests/machine/x/c/left_join_multi.c:118:51: warning: initialization of ‘int’ from ‘char *’ makes integer from pointer without a cast [-Wint-conversion]
  118 |             (resultItem){.orderId = o.id, .name = c.name, .item = i};
      |                                                   ^
/workspace/mochi/tests/machine/x/c/left_join_multi.c:118:51: note: (near initialization for ‘(anonymous).name’)
/workspace/mochi/tests/machine/x/c/left_join_multi.c:118:67: error: incompatible types when initializing type ‘int’ using type ‘itemsItem’
  118 |             (resultItem){.orderId = o.id, .name = c.name, .item = i};
      |                                                                   ^
/workspace/mochi/tests/machine/x/c/left_join_multi.c:124:28: error: invalid initializer
  124 |   list_resultItem result = _t4;
      |                            ^~~

   1: #include <stdio.h>
